--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "chatgpt-next-web",
-  "version": "1.9.3",
+  "version": "1.1",
   "private": false,
   "license": "Anti 996",
   "scripts": {
@@ -12,31 +12,33 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "@hello-pangea/dnd": "^16.2.0",
     "@svgr/webpack": "^6.5.1",
     "@vercel/analytics": "^0.1.11",
+    "array.prototype.at": "^1.1.1",
     "emoji-picker-react": "^4.4.7",
     "eventsource-parser": "^0.1.0",
     "fuse.js": "^6.6.2",
-    "next": "^13.2.3",
+    "next": "^13.2.4",
     "node-fetch": "^3.3.1",
     "openai": "^3.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-markdown": "^8.0.5",
+    "react-native": "^0.71.6",
+    "react-toastify": "^9.1.2",
     "rehype-highlight": "^6.0.0",
     "rehype-katex": "^6.0.2",
     "remark-breaks": "^3.0.2",
     "remark-gfm": "^3.0.1",
     "remark-math": "^5.1.1",
-    "sass": "^1.59.2",
+    "sass": "^1.60.0",
     "spark-md5": "^3.0.2",
     "use-debounce": "^9.0.3",
     "zustand": "^4.3.6"
   },
   "devDependencies": {
-    "@types/node": "^18.14.6",
-    "@types/react": "^18.0.28",
+    "@types/node": "18.15.11",
+    "@types/react": "18.0.31",
     "@types/react-dom": "^18.0.11",
     "@types/react-katex": "^3.0.0",
     "@types/spark-md5": "^3.0.2",
