--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "sass": "^1.60.0",
     "spark-md5": "^3.0.2",
     "use-debounce": "^9.0.3",
+    "yarn": "^1.22.19",
     "zustand": "^4.3.6"
   },
   "devDependencies": {
